log.txt
In file included from ../metodi/modificaNome.h:16,
                 from routes.h:13,
                 from routes.cpp:1:
/usr/include/pistache/router.h: In instantiation of ‘Pistache::Rest::Route::Handler Pistache::Rest::Routes::bind(Result (*)(Args ...)) [with Result = bool; Args = {int, int}; Pistache::Rest::Route::Handler = std::function<Pistache::Rest::Route::Result(Pistache::Rest::Request, Pistache::Http::ResponseWriter)>]’:
routes.cpp:18:103:   required from here
/usr/include/pistache/router.h:437:21: error: cannot convert ‘const Pistache::Rest::Request’ to ‘int’ in argument passing
  437 |                 func(request, std::move(response));
      |                 ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/pistache/router.h: In instantiation of ‘struct Pistache::Rest::Routes::details::BindChecks<int, int>’:
/usr/include/pistache/router.h:403:70:   required from ‘constexpr void Pistache::Rest::Routes::details::static_checks() [with Checks = BindChecks; Args = {int, int}]’
/usr/include/pistache/router.h:434:65:   required from ‘Pistache::Rest::Route::Handler Pistache::Rest::Routes::bind(Result (*)(Args ...)) [with Result = bool; Args = {int, int}; Pistache::Rest::Route::Handler = std::function<Pistache::Rest::Route::Result(Pistache::Rest::Request, Pistache::Http::ResponseWriter)>]’
routes.cpp:18:103:   required from here
/usr/include/pistache/router.h:377:21: error: static assertion failed: Function should accept (const Rest::Request&, HttpResponseWriter)
  377 |                     request_check && response_check,
      |                     ^~~~~~~~~~~~~
/usr/include/pistache/router.h:377:21: note: ‘Pistache::Rest::Routes::details::BindChecks<int, int>::request_check’ evaluates to false
make: *** [Makefile:45: api] Errore 1

